Name:                ghc-modid
Version:             0.1.0

Homepage:            https://github.com:merijn/ghc-modid
Bug-Reports:         https://github.com:merijn/ghc-modid/issues

Author:              Merijn Verstraaten
Maintainer:          Merijn Verstraaten <merijn@inconsistent.nl>
Copyright:           Copyright © 2017 Merijn Verstraaten

License:             GPL-3
License-File:        LICENSE

Category:            System
Cabal-Version:       >= 1.10
Build-Type:          Simple
Tested-With:         GHC == 8.0

Synopsis:            

Description:

Executable ghc-modid
  Default-Language:     Haskell2010
  GHC-Options:          -O -Wall -fno-warn-unused-do-bind -rtsopts
  GHC-Prof-Options:     -fprof-auto
  Main-Is:              Main.hs

  Build-Depends:        base
               ,        bytestring == 0.10.8.*
               ,        directory == 1.3.0.*
               ,        filepath == 1.4.1.*
               ,        network == 2.6.3.*
               ,        optparse-applicative == 0.13.2.*
               ,        process == 1.6.1.*
               ,        text
               ,        unix == 2.7.2.*

Source-Repository head
  Type:     git
  Location: git+ssh://github.com:merijn/ghc-modid
